[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/monogram_extended.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/monogram_extended.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="NetworkPanel" type="Panel" parent="."]
margin_left = 32.0
margin_top = 96.0
margin_right = 608.0
margin_bottom = 320.0
__meta__ = {
"_edit_lock_": true
}

[node name="ServerIP" type="LineEdit" parent="NetworkPanel"]
margin_left = 80.0
margin_top = 128.0
margin_right = 400.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 202.058, 8.67853 )
custom_fonts/font = SubResource( 1 )
text = "127.0.0.1"
placeholder_text = "IP Address"
caret_blink = true
caret_blink_speed = 0.35

[node name="PlayerName" type="LineEdit" parent="NetworkPanel"]
margin_left = 80.0
margin_top = 48.0
margin_right = 400.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 202.058, 8.67853 )
custom_fonts/font = SubResource( 1 )
placeholder_text = "Enter name:"
caret_blink = true
caret_blink_speed = 0.35

[node name="ServerPort" type="LineEdit" parent="NetworkPanel"]
margin_left = 80.0
margin_top = 176.0
margin_right = 234.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 2 )
text = "4546"
placeholder_text = "Port"
caret_blink = true
caret_blink_speed = 0.35

[node name="JoinButton" type="Button" parent="NetworkPanel"]
margin_left = 256.0
margin_top = 176.0
margin_right = 320.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 3 )
text = "Join"

[node name="HostButton" type="Button" parent="NetworkPanel"]
margin_left = 336.0
margin_top = 176.0
margin_right = 400.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 4 )
text = "Host"

[node name="IPLabel" type="Label" parent="NetworkPanel"]
margin_left = 32.0
margin_top = 128.0
margin_right = 80.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 6 )
text = "IP:"
align = 2
valign = 1

[node name="NameLabel" type="Label" parent="NetworkPanel"]
margin_left = 16.0
margin_top = 48.0
margin_right = 80.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 6 )
text = "Name:"
align = 2
valign = 1

[node name="PortLabel" type="Label" parent="NetworkPanel"]
margin_left = 16.0
margin_top = 176.0
margin_right = 80.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 6 )
text = "Port:"
align = 2
valign = 1
[connection signal="pressed" from="NetworkPanel/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="NetworkPanel/HostButton" to="." method="_on_HostButton_pressed"]
